Align voltage and fix bad clock format on initialization.

--- a/src/ground/interface/src/Navbar/Navbar.css
+++ b/src/ground/interface/src/Navbar/Navbar.css
@@ -47,6 +47,7 @@
   top: 32px;
   left: 12px;
   padding: 5px;
+  padding-right: 13px;
   cursor: pointer;
   width: 100%;
   font-size: 12px;
